--- a/stores/role-assignments/store.fga.yaml
+++ b/stores/role-assignments/store.fga.yaml
@@ -124,4 +124,4 @@ tests:
           object: project:java-sdk
           assertions:
             can_view: false
-            can_view: false
+            can_edit: false
